<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/reminder_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</layout>